--- a/src/devplex.GitServer.Web/Views/Home/Index.cshtml
+++ b/src/devplex.GitServer.Web/Views/Home/Index.cshtml
@@ -15,6 +15,9 @@
       </select>
     </form>
     <div id="repositories">
+      <div class="spinner">
+        <i class="icon-spinner icon-spin icon-large"></i>
+      </div>
       <ul>
       </ul>
     </div>
