B: Limited commits to the current branch.

--- a/src/devplex.GitServer.Web/Views/Shared/_RepositoryTree.cshtml
+++ b/src/devplex.GitServer.Web/Views/Shared/_RepositoryTree.cshtml
@@ -17,7 +17,7 @@
       {
         <td><time datetime="@element.Commit.CommitDate.Value.ToString("yyyy-MM-ddTHH:mm:ssZ")">@element.Commit.CommitDate.Value</time></td>
         <td>
-          @Html.ActionLink(element.Commit.Message, "Commit", "Repository", new { hash = element.Commit.Hash }, null) [@element.Commit.CommitAuthor]
+          @Html.ActionLink(element.Commit.Message, "Commit", "Repository", new { branch = Model.Branch, hash = element.Commit.Hash }, null) [@element.Commit.CommitAuthor]
         </td>
       }
     </tr>
