--- a/src/devplex.GitServer.Web/Views/Shared/_TopBar.cshtml
+++ b/src/devplex.GitServer.Web/Views/Shared/_TopBar.cshtml
@@ -12,8 +12,15 @@
     <section class="top-bar-section">
       <!-- Right Nav Section -->
       <ul class="right">
+        <li><a href="https://github.com/devplex/GitServer/issues" target="_blank"><i class="icon-github"></i> Issues</a></li>
         <li class="divider hide-for-small"></li>
-        <li>@Html.ActionLink("Help", "Index", "Help")</li>
+        <li class="has-dropdown">@Html.ActionLink("Help", "Index", "Help")
+
+          <ul class="dropdown">
+            <li><a href="http://git-scm.com/book" target="_blank">Pro Git</a></li>
+            <li><a href="http://try.github.io/" target="_blank">Learn Git</a></li>
+          </ul>
+        </li>
       </ul>
     </section>
   </nav>
