--- a/src/devplex.GitServer.Web/Views/Home/Index.cshtml
+++ b/src/devplex.GitServer.Web/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
     </form>
     <div id="repositories">
       <div class="spinner">
-        <i class="icon-spinner icon-spin icon-large"></i>
+        <i class="fa fa-spinner fa-spin fa-lg"></i>
       </div>
       <ul>
       </ul>
