--- a/src/devplex.GitServer.Web/Views/Shared/_TopBar.cshtml
+++ b/src/devplex.GitServer.Web/Views/Shared/_TopBar.cshtml
@@ -12,7 +12,7 @@
     <section class="top-bar-section">
       <!-- Right Nav Section -->
       <ul class="right">
-        <li><a href="https://github.com/devplex/GitServer/issues" target="_blank"><i class="icon-github"></i> Issues</a></li>
+        <li><a href="https://github.com/devplex/GitServer/issues" target="_blank"><i class="fa fa-github"></i> Issues</a></li>
         <li class="divider hide-for-small"></li>
         <li class="has-dropdown">@Html.ActionLink("Help", "Index", "Help")
 
