--- a/src/devplex.GitServer.Web/Views/Repository/Blob.cshtml
+++ b/src/devplex.GitServer.Web/Views/Repository/Blob.cshtml
@@ -11,7 +11,7 @@
       <section>
         <p class="title" data-section-title>
           <a href="@Model.RawUrl">
-            <i class="icon-download"></i><span class="section-name">Download file</span>
+            <i class="fa fa-download"></i><span class="section-name">Download file</span>
           </a>
         </p>
       </section>
