--- a/src/devplex.GitServer.Web/Views/Shared/_RepositoryTree.cshtml
+++ b/src/devplex.GitServer.Web/Views/Shared/_RepositoryTree.cshtml
@@ -15,12 +15,12 @@
       <tr>
         @if (element is TreeDirectory)
         {
-          <td class="tree-icon"><i class="icon-folder-close"></i></td>
+          <td class="tree-icon"><i class="fa fa-folder"></i></td>
           <td>@Html.ActionLink(element.Name, "Tree", "Repository", new { branch = Model.Branch, path = string.Concat(Model.RepositoryPath, "/", element.Path) }, null)</td>
         }
         else if (element is TreeFile)
         {
-          <td class="tree-icon"><i class="icon-file"></i></td>
+          <td class="tree-icon"><i class="fa fa-file"></i></td>
           <td>@Html.ActionLink(element.Name, "Blob", "Repository", new { branch = Model.Branch, path = string.Concat(Model.RepositoryPath, "/", element.Path) }, null)</td>
         }
         @if (element.Commit != null && element.Commit.CommitDate.HasValue)
