--- a/src/devplex.GitServer.Web/Views/Repository/Commit.cshtml
+++ b/src/devplex.GitServer.Web/Views/Repository/Commit.cshtml
@@ -5,10 +5,15 @@
   </div>
 </div>
 <div class="row">
+	<div class="large-12 columns">
+		<div class="section-container horizontal-nav" data-section="horizontal-nav">
+			@Html.Partial("_RepositoryNavigation")
+		</div>
+	</div>
+</div>
+<div class="row">
   <div class="large-12 columns">
-    <div class="section-container horizontal-nav" data-section="horizontal-nav">
-      @Html.Partial("_RepositoryNavigation")
-    </div>
+    @Html.RenderMarkdown(Model.CommitMessage.Message)
   </div>
 </div>
 @foreach (var file in Model.Files)
