R: Added top bar.

--- a/src/devplex.GitServer.Web/Content/Styles/main.scss
+++ b/src/devplex.GitServer.Web/Content/Styles/main.scss
@@ -1,3 +1,4 @@
 ﻿@import
   "../../bower_components/foundation/scss/normalize.scss",
-  "../../bower_components/foundation/scss/foundation.scss";
+  "../../bower_components/foundation/scss/foundation.scss",
+  "top-bar";
